<resources>
    <string name="app_name">TCC_GRUPOC</string>
    <string name="caminhoWebService">http://10.87.106.29/3DSAA_TCC_GRUPOC</string>
    <string name="txt_descricao">Descrição</string>
    <string name="txt_descrição">Descrição</string>
    <string name="tview_desc">Descrição</string>
    <string name="btn_relato">Enviar</string>
    <string name="edit_data">Data</string>
    <string name="edit_hora">Horario</string>
    <string name="sw_anonimo">Anonimo</string>
    <string-array name="spinner_values">
        <item>Roubo</item>
        <item>Furto</item>
        <item>Homicido</item>
        <item>Roubo de carro</item>
    </string-array>
    <string name="campoUsername">Nome de Usuario</string>
    <string name="campoSenha">Senha:</string>
    <string name="txtEsqueci">Esqueci a Senha</string>
    <string name="btLogar">Logar</string>
    <string name="btLogarFace">Logar com o Facebook</string>
    <string name="btLogarGoogle">Logar com o Google</string>
    <string name="btLogarFace2">F  Logar com o Facebook</string>
    <string name="btLogarGoogle2">G    Logar com o Google</string>
    <string name="nome_app">Nome do App</string>
    <string name="titulo_cadastro">Cadastro</string>
    <string name="hint_usuario">Usuário</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_confirm_senha">Confirmar Senha</string>
    <string name="bt_cadastrar">Cadastrar</string>
    <string name="bt_logar">Já tenho conta</string>
    <string name="title_activity_main">Map</string>
    <string name="title_activity_navigation_draw">navigation_draw</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
