<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_1"
    tools:context=".RelatoActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="103dp"
        android:layout_height="39dp"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="16dp"
        android:text="Relato"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_data"
        android:layout_width="176dp"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/edit_data"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edit_hora"
        android:layout_width="174dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/edit_hora"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_data" />

    <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map_relato"
        android:layout_width="221dp"
        android:layout_height="311dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:apiKey="0AOvUFOH7B4e1mBLmq1cEkgCMwk_YYYYY_XXXXX"
        app:layout_constraintStart_toEndOf="@+id/spin_relato"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_relato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/btn_relato"
        android:text="@string/btn_relato"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_descricao" />


    <TextView
        android:id="@+id/text_descricao"
        android:layout_width="94dp"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginBottom="28dp"
        android:hint="@string/tview_desc"
        android:text="@string/tview_desc"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_descricao"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spin_relato"
        android:layout_width="173dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:entries="@array/spinner_values"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_hora" />

    <Switch
        android:id="@+id/sw_anonimo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="120dp"
        android:hint="@string/sw_anonimo"
        android:text="@string/sw_anonimo"
        app:layout_constraintStart_toEndOf="@+id/edit_descricao"
        app:layout_constraintTop_toBottomOf="@+id/spin_relato" />

    <EditText
        android:id="@+id/edit_descricao"
        android:layout_width="170dp"
        android:layout_height="74dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spin_relato" />


</androidx.constraintlayout.widget.ConstraintLayout>